Fix: Make cancel button only visible on hover

--- a/platform/ui/src/assets/styles/styles.css
+++ b/platform/ui/src/assets/styles/styles.css
@@ -53,3 +53,11 @@
 .showTooltipOnHover:hover .tooltip {
   display: block;
 }
+
+.showExcludeButtonOnHover .excludeButton {
+  display: none;
+}
+
+.showExcludeButtonOnHover:hover .excludeButton {
+  display: block;
+}
